# PA_Microscope

./: .gitignore  25fps44153.csv  CMakeLists.txt  CPP_GUIDE.md  README.md  build.bat  deploy.bat  traj_xy_full_10Hz_33124.csv  traj_xy_full_10Hz_33124_all143clk_scan94p735ms_phase_-4500_cycles.csv  traj_xy_full_25Hz_trueHybrid_RLE_max1p5MHz_phase_-3400cycles.csv
src/: AlineWidget.cpp  AlineWidget.h  ColorBar.cpp  ColorBar.h  ColorMap.cpp  ConfigManager.cpp  ConfigManager.h  CscanWidget.cpp  CscanWidget.h  DataPipeline.cpp  DataPipeline.h  FileWriter.cpp  FileWriter.h  FpgaSerial.cpp  FpgaSerial.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ScanController.cpp  ScanController.h  SpectrumFifo.cpp  SpectrumFifo.h  TrajectoryLoader.cpp  TrajectoryLoader.h  Types.h  main.cpp
